<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/size20"
    android:paddingLeft="@dimen/size16"
    android:paddingRight="@dimen/size16"
    android:id="@+id/mainLayout"
    android:paddingTop="@dimen/size20"
    tools:context="com.example.matthewkay.tipcalculator_counter.MainActivity">


    <EditText
        android:id="@+id/billAmountID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/Green"
        android:hint="@string/bill_amount"
        android:inputType="numberDecimal"


        />


    <EditText
        android:id="@+id/splitAmountID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size35"
        android:textColorHint="@color/Green"
        android:hint="@string/split_amount"
        android:inputType="number" />


    <RadioGroup
        android:id="@+id/radioGroupID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/size35"
        android:paddingLeft="@dimen/size16"
        android:paddingRight="@dimen/size16">

        <RadioButton
            android:id="@+id/percent10ID"
            android:layout_width="wrap_content"
            android:shadowColor="@color/Green"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/size20"
            android:text="@string/percent10" />

        <RadioButton
            android:id="@+id/percent15ID"
            android:layout_width="wrap_content"
            android:shadowColor="@color/Green"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/size20"
            android:text="@string/percent15" />

        <RadioButton
            android:id="@+id/percent20ID"
            android:layout_width="wrap_content"
            android:shadowColor="@color/Green"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/size20"
            android:text="@string/percent20" />

        <RadioButton
            android:id="@+id/percentCustomID"
            android:layout_width="wrap_content"
            android:shadowColor="@color/Green"
            android:layout_height="wrap_content"
            android:text="@string/percentCustom"

            />

    </RadioGroup>

    <EditText
        android:id="@+id/customInputID"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/size35"
        android:layout_height="wrap_content"
        android:hint="@string/percentCustomNum"
        android:textColorHint="@color/Green"
        android:inputType="number"


        />

    <Button
        android:id="@+id/calculateID"
        android:layout_width="@dimen/size125"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size20"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/calculate" />

    <Button
        android:id="@+id/resetID"
        android:layout_width="@dimen/size125"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size20"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/Red"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/reset" />


</LinearLayout>
